--- a/gb/19/4/12/n11181379.md
+++ b/gb/19/4/12/n11181379.md
@@ -1,69 +1,68 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bpewoh325/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bpewoh325/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bpewoh325/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bpewoh325/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bpewoh325/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bpewoh325/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bpewoh325/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bpewoh325/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“袋鼠妈妈”育新儿 圣保罗医院首获成功</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年04月12日讯】（记者余天白编译报导）<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E6%AF%8D%E5%A9%B4.md#1">母婴</a><ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E8%82%A2%E4%BD%93%E6%8E%A5%E8%A7%A6.md#1">肢体接触</a>是促进母乳喂养的重要条件，但怀抱婴儿的简单任务对刚刚经历破腹产、体弱无力的新妈妈们却是挑战。温哥华圣保罗医院（St. Paul’s Hospital）最近以<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E8%A2%8B%E9%BC%A0%E5%A6%88%E5%A6%88.md#1">袋鼠妈妈</a>为灵感，成功解决了这一问题。</p>
-<p>圣保罗医院近日开始试用一种名为“<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E4%B9%94%E4%BC%8A%E5%B8%A6.md#1">乔伊带</a>”（Joeyband）的绑带产品，将刚刚出生的婴儿用绑带裹在母亲的胸部或腹部，如同小袋鼠蜷缩在<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E8%A2%8B%E9%BC%A0%E5%A6%88%E5%A6%88.md#1">袋鼠妈妈</a>的育儿袋里。这一绑带在防治婴儿跌落的同时，还会促进婴儿在出生后与母亲的<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E8%82%A2%E4%BD%93%E6%8E%A5%E8%A7%A6.md#1">肢体接触</a>。</p>
-<p>大量临床证据显示，母亲与<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E6%96%B0%E7%94%9F%E5%84%BF.md#1">新生儿</a>的皮肤接触极其关键。母亲在生产后一小时内与新生儿的皮肤接触若不间断，母乳喂养的成功率会大大提高。此外，母亲与新生儿的亲密接触能帮助母子建立情感纽带、减少母亲患产后忧郁症的风险。对新生儿而言，与母亲接触能够助其调整呼吸和体温。</p>
-<figure id="attachment_11181413" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/04/Mothers-Choice-Product-1.jpg"><img class="size-large wp-image-11181413" src="https://i.epochtimes.com/assets/uploads/2019/04/Mothers-Choice-Product-1-600x335.jpg" alt="母婴皮肤接触极其重要，但对刚刚经历破腹产、体弱无力的新妈妈而言却是挑战。温哥华圣保罗医院最近以袋鼠妈妈为灵感，使用“乔伊带”这一绑带产品，成功解决了这一难题。（Mothers Choice Product）" width="600" b="335" /></a><figcaption class="wp-caption-text"><ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E6%AF%8D%E5%A9%B4.md#1">母婴</a>皮肤接触极其重要，但对刚刚经历破腹产、体弱无力的新妈妈而言却是挑战。温哥华圣保罗医院最近以袋鼠妈妈为灵感，使用“<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E4%B9%94%E4%BC%8A%E5%B8%A6.md#1">乔伊带</a>”这一绑带产品，成功解决了这一难题。（Mothers Choice Product）</figcaption></figure>
+<p>【大纪元2019年04月12日讯】（记者余天白编译报导）<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%AF%8D%E5%A9%B4.md#1">母婴</a><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%82%A2%E4%BD%93%E6%8E%A5%E8%A7%A6.md#1">肢体接触</a>是促进母乳喂养的重要条件，但怀抱婴儿的简单任务对刚刚经历破腹产、体弱无力的新妈妈们却是挑战。温哥华圣保罗医院（St. Paul’s Hospital）最近以<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%A2%8B%E9%BC%A0%E5%A6%88%E5%A6%88.md#1">袋鼠妈妈</a>为灵感，成功解决了这一问题。</p>
+<p>圣保罗医院近日开始试用一种名为“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B9%94%E4%BC%8A%E5%B8%A6.md#1">乔伊带</a>”（Joeyband）的绑带产品，将刚刚出生的婴儿用绑带裹在母亲的胸部或腹部，如同小袋鼠蜷缩在<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%A2%8B%E9%BC%A0%E5%A6%88%E5%A6%88.md#1">袋鼠妈妈</a>的育儿袋里。这一绑带在防治婴儿跌落的同时，还会促进婴儿在出生后与母亲的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%82%A2%E4%BD%93%E6%8E%A5%E8%A7%A6.md#1">肢体接触</a>。</p>
+<p>大量临床证据显示，母亲与<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%96%B0%E7%94%9F%E5%84%BF.md#1">新生儿</a>的皮肤接触极其关键。母亲在生产后一小时内与新生儿的皮肤接触若不间断，母乳喂养的成功率会大大提高。此外，母亲与新生儿的亲密接触能帮助母子建立情感纽带、减少母亲患产后忧郁症的风险。对新生儿而言，与母亲接触能够助其调整呼吸和体温。</p>
+<figure id="attachment_11181413" aria-describedby="caption-attachment-11181413" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/04/Mothers-Choice-Product-1.jpg"><img class="size-large wp-image-11181413" src="https://i.epochtimes.com/assets/uploads/2019/04/Mothers-Choice-Product-1-600x335.jpg" alt="母婴皮肤接触极其重要，但对刚刚经历破腹产、体弱无力的新妈妈而言却是挑战。温哥华圣保罗医院最近以袋鼠妈妈为灵感，使用“乔伊带”这一绑带产品，成功解决了这一难题。（Mothers Choice Product）" width="600" b="335" /></a><figcaption id="caption-attachment-11181413" class="wp-caption-text"><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%AF%8D%E5%A9%B4.md#1">母婴</a>皮肤接触极其重要，但对刚刚经历破腹产、体弱无力的新妈妈而言却是挑战。温哥华圣保罗医院最近以袋鼠妈妈为灵感，使用“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B9%94%E4%BC%8A%E5%B8%A6.md#1">乔伊带</a>”这一绑带产品，成功解决了这一难题。（Mothers Choice Product）</figcaption></figure>
 <h2>破腹产母亲最受益</h2>
 <p>圣保罗医院妇产中心主任哈里森（Scott Harrison）表示，这一新工具对接受破腹产的母亲尤其有帮助。“在过去，母亲在破腹产之后和婴儿进行肢体接触比较困难，因为母亲还在接受静脉注射，或者母亲还有点困倦，或者身体不太舒服。”他对Postmedia表示，“这种支撑力很强的绑带能让婴儿牢固地贴在妈妈身上。”</p>
 <p>研究显示，在采用破腹产生产的母亲中，母乳喂养成功率普遍低于自然生产的母亲。</p>
 <p>“乔伊带”已被美国多家医院采用，但圣保罗医院是加拿大第一家在手术室内试用该产品的医院。在圣保罗基金会（St. Paul’s Foundation）的资助下，圣保罗医院已为约20名母亲试用了该产品，且母亲可带该产品回家。哈里森表示，经历破腹产的母亲通常需要使用该绑带数周，之后身体才能恢复力气，能够独立怀抱婴儿，</p>
 <p>“我们从（母亲）那里听到的所有反馈都是非常舒适，她们非常喜欢这个经历。”哈里森说。</p>
 <p>2017年12月在圣保罗医院以破腹产诞下一名男婴的母亲贝恩斯（Puneet Bains）是试用新绑带的母亲之一。她表示，自己在手术后行动不便，而绑带能让自己安全地怀抱着孩子。“我不用担心他掉下来、滑下来。”她说，“（用绑带）没有任何痛苦，很舒适。”</p>
-<figure id="attachment_11181412" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/04/Banner_3_LDR_4_720-Joeyband.jpg"><img class="size-large wp-image-11181412" src="https://i.epochtimes.com/assets/uploads/2019/04/Banner_3_LDR_4_720-Joeyband-600x600.jpg" alt="温哥华圣保罗医院最近以袋鼠妈妈为灵感，使用“乔伊带”这一绑带产品，让新生儿与父母有充分的皮肤接触。图为新爸爸使用“乔伊带”。（Joeyband.com）" width="600" b="600" /></a><figcaption class="wp-caption-text">温哥华圣保罗医院最近以袋鼠妈妈为灵感，使用“乔伊带”这一绑带产品，让<ahref="https://github.com/bpewoh325/djy/blob/master/gb/tag/%E6%96%B0%E7%94%9F%E5%84%BF.md#1">新生儿</a>与父母有充分的皮肤接触。图为新爸爸使用“乔伊带”。（Joeyband.com）</figcaption></figure>
+<figure id="attachment_11181412" aria-describedby="caption-attachment-11181412" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/04/Banner_3_LDR_4_720-Joeyband.jpg"><img class="size-large wp-image-11181412" src="https://i.epochtimes.com/assets/uploads/2019/04/Banner_3_LDR_4_720-Joeyband-600x600.jpg" alt="温哥华圣保罗医院最近以袋鼠妈妈为灵感，使用“乔伊带”这一绑带产品，让新生儿与父母有充分的皮肤接触。图为新爸爸使用“乔伊带”。（Joeyband.com）" width="600" b="600" /></a><figcaption id="caption-attachment-11181412" class="wp-caption-text">温哥华圣保罗医院最近以袋鼠妈妈为灵感，使用“乔伊带”这一绑带产品，让<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%96%B0%E7%94%9F%E5%84%BF.md#1">新生儿</a>与父母有充分的皮肤接触。图为新爸爸使用“乔伊带”。（Joeyband.com）</figcaption></figure>
 <p>责任编辑：童宇</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/2/7/n10123712.md#1">袋鼠宝宝完成鼠生第一跳 可爱模样让人想立即抱回家</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/9/18/n12414720.md#1">加拿大各省最新疫情数据 （11月01日）</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/10/20/n12489720.md#1">注射流感疫苗 多伦多在线预约系统启动</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/10/16/n12480117.md#1">疫情下接种流感疫苗需预约</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/8/14/n12329368.md#1">疫情下戴口罩成常态 口罩五花八门 哪种防护效果好？</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/8/11/n12320704.md#1">专家：查体温与深度清洗 不能很有效防疫</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/7/8/n12239903.md#1">戴口罩不舒服？专家教你如何应对</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/3/17/n11947900.md#1">车祸致颈椎受伤 后遗症影响后半生</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/3/17/n11947827.md#1">为什么要去看针灸医生（二）?</a></li>
-<li><a href="https://github.com/bpewoh325/djy/blob/master/gb/20/3/18/n11950165.md#1">家中若有人染疫或出现症状 该怎么办？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/2/7/n10123712.md#1">袋鼠宝宝完成鼠生第一跳 可爱模样让人想立即抱回家</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/18/n13714046.md#1">症状相似 如何区分春季过敏和COVID-19？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/3/23/n13666642.md#1">卑诗骨科手术排长队    医生恳请省府介入</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/12/14/n13436219.md#1">【健康1+1】Omicron变种意想不到的事出现？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/11/27/n13401708.md#1">【健康1+1】疫苗刺突蛋白 影响人体DNA？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/11/1/n13346032.md#1">又一种疫苗想进入加国市场 诺瓦瓦克斯提交审批</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/10/28/n13334904.md#1">实习护士私人护理深造 安省每年资助1万</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/10/27/n13334175.md#1">卑诗省民明年5月前可接种第三针</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/10/24/n13326507.md#1">要不要给孩子打疫苗？加拿大半数父母犹豫</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/10/18/n13313476.md#1">辉瑞已经正式要求加卫生部批准其儿童疫苗</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10263648.md#1" target="_blank">共产暴政录：迫害法轮功，毁坏道德</a></li><li><a href="https://github.com/bpewoh325/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238020.md#1" target="_blank">四百万难治好的脑瘤并发症 修大法痊愈</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/13/n10561691.md#1" target="_blank">林辉：苏联20万“笑话犯”被关背后的荒谬</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/30/n4283873.md#1" target="_blank">方林达：法轮功参与政治了吗？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/11/n12468150.md#1">再生少年胜五郎 说出冥界转生过程钜细靡遗</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/11/1/n12517575.md#1">【大陆新闻解毒】时事小品：中国人民组织起来了</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/9/28/n12437702.md#1">【思想领袖】林赛：美左派破坏圣像 犹如文革</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/31/n12515233.md#1">【重播】最后冲刺 川普及夫人访宾州五地演讲</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514672.md#1">【新闻看点】备战动员？五中公报泄习心头大患</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/31/n12515225.md#1">【拍案惊奇】美大选“神算”开口 中共甩锅新招</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/29/n12512090.md#1">明星追星 江疏影贺偶像玄彬获奖“实至名归”</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/31/n12516017.md#1">“007”詹姆斯·邦德饰演者肖恩·康纳利去世</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12513453.md#1">Rain与TWICE玩黑手党游戏 粉丝Momo共舞好紧张</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12512257.md#1">崔智友产后5月速开工 抱着婴儿现身母爱爆棚</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514896.md#1">车评：双色多变化 2020 Nissan Kicks SR</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12513083.md#1">英男童5点起床习惯被取笑 却救全家人性命</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12512744.md#1">曾多次准确预测大选 犹太拉比：川普会连任</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12513272.md#1">濒死男子敲天堂大门 被告知时辰未到</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514662.md#1">干咳不是感冒是秋燥？1穴位立即止咳</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bpewoh325/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bpewoh325/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/4/12/n11181379.htm">“袋鼠妈妈”育新儿 圣保罗医院首获成功</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/4/12/n11181379.htm">“袋鼠妈妈”育新儿 圣保罗医院首获成功</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bpewoh325/djy/blob/master/gb/19/4/12/n11181379.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bpewoh325/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bpewoh325/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bpewoh325/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bpewoh325/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bpewoh325/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/19/4/12/n11181379.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
